--- a/.gitignore
+++ b/.gitignore
@@ -58,5 +58,8 @@ crashlytics.properties
 crashlytics-build.properties
 
 ### Other
-download/
-shared/
+shared1/
+shared2/
+shared3/
+shared4/
+shared5/
